updated modules files

--- a/samples/module/Makefile
+++ b/samples/module/Makefile
@@ -1,5 +1,5 @@
 KERNEL_BUILD := /lib/modules/`uname -r`/build
-obj-m := expsym.o impsym.o
+obj-m :=  expsym.o impsym.o module1.o module2.o
 modules:
 	@$(MAKE) -C $(KERNEL_BUILD) M=$(PWD) $@
 clean:
